--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,3 +10,5 @@ actix-web = "4"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
+serde_json = "1.0"
+once_cell = "1.8.0"
